--- a/data_analyst_intern.ipynb
+++ b/data_analyst_intern.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPBaqemYRyNwLfme8LB0GJJ",
+      "authorship_tag": "ABX9TyOUdkHYCudO44gEw1ryZxIR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1045,12 +1045,12 @@
     {
       "cell_type": "code",
       "source": [
-        "df_cleaned.rename(columns=lambda x: x.strip().lower().replace(\"make\", \"Company\"), inplace=True)\n"
+        "df_cleaned.rename(columns=lambda x: x.strip().title().replace(\"\", \"\"), inplace=True)\n"
       ],
       "metadata": {
         "id": "7_0UvvUZ9noC"
       },
-      "execution_count": 63,
+      "execution_count": 70,
       "outputs": []
     },
     {
@@ -1063,15 +1063,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7UhIG4_d9nkf",
-        "outputId": "3758dc29-7b17-42e0-ef49-d53d16025046"
+        "outputId": "31c82f56-93bd-4674-8f5e-5607ae431a2a"
       },
-      "execution_count": 64,
+      "execution_count": 71,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "       year company                model        trim   body transmission  \\\n",
+            "       Year Company                Model        Trim   Body Transmission  \\\n",
             "0      2015     Kia              sorento          LX    SUV    automatic   \n",
             "1      2015     Kia              sorento          LX    SUV    automatic   \n",
             "2      2014     Bmw             3 series  328i SULEV  Sedan    automatic   \n",
@@ -1084,7 +1084,7 @@
             "53380  2012     Kia              sorento          LX    SUV    automatic   \n",
             "53381  2012     Kia             sportage          EX    SUV    automatic   \n",
             "\n",
-            "                     vin state  condition      odometer     color interior  \\\n",
+            "                     Vin State  Condition      Odometer     Color Interior  \\\n",
             "0      5xyktca69fg566472    ca   5.000000  16639.000000     white    black   \n",
             "1      5xyktca69fg561319    ca   5.000000   9393.000000     white    beige   \n",
             "2      wba3c1c51ek116351    ca  45.000000   1331.000000      gray    black   \n",
@@ -1097,7 +1097,7 @@
             "53380  5xykt3a61cg230276    oh  36.000000  65239.000000  burgundy     gray   \n",
             "53381    kndpc3a26c73311    ca  29.595975  79912.436911     black    black   \n",
             "\n",
-            "                                       seller           mmr  sellingprice  \\\n",
+            "                                       Seller           Mmr  Sellingprice  \\\n",
             "0                     kia motors america  inc  20500.000000  21500.000000   \n",
             "1                     kia motors america  inc  20800.000000  21500.000000   \n",
             "2      financial services remarketing (lease)  31900.000000  30000.000000   \n",
@@ -1110,18 +1110,18 @@
             "53380                      jr's auto city inc  11800.000000  12400.000000   \n",
             "53381           ford motor credit company llc  12200.942751  11805.660834   \n",
             "\n",
-            "                                      saledate  \n",
-            "0      Tue Dec 16 2014 12:30:00 GMT-0800 (PST)  \n",
-            "1      Tue Dec 16 2014 12:30:00 GMT-0800 (PST)  \n",
-            "2      Thu Jan 15 2015 04:30:00 GMT-0800 (PST)  \n",
-            "3      Thu Jan 29 2015 04:30:00 GMT-0800 (PST)  \n",
-            "4      Thu Dec 18 2014 12:30:00 GMT-0800 (PST)  \n",
-            "...                                        ...  \n",
-            "53377  Fri Jan 02 2015 09:00:00 GMT-0800 (PST)  \n",
-            "53378  Tue Dec 30 2014 10:30:00 GMT-0800 (PST)  \n",
-            "53379  Wed Dec 31 2014 10:15:00 GMT-0800 (PST)  \n",
-            "53380  Tue Dec 23 2014 09:30:00 GMT-0800 (PST)  \n",
-            "53381  Thu Dec 18 2014 10:00:00 GMT-0800 (PST)  \n",
+            "         Saledate  \n",
+            "0      16-12-2014  \n",
+            "1      16-12-2014  \n",
+            "2      15-01-2015  \n",
+            "3      29-01-2015  \n",
+            "4      18-12-2014  \n",
+            "...           ...  \n",
+            "53377  02-01-2015  \n",
+            "53378  30-12-2014  \n",
+            "53379  31-12-2014  \n",
+            "53380  23-12-2014  \n",
+            "53381  18-12-2014  \n",
             "\n",
             "[53382 rows x 16 columns]\n"
           ]
@@ -1137,6 +1137,15 @@
         "id": "6-vU6hhH-Hlk"
       },
       "execution_count": 65,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "HCOsoP_xCtZ-"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
