--- a/data_analyst_intern.ipynb
+++ b/data_analyst_intern.ipynb
@@ -1088,15 +1088,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6331b707-9df3-4d4f-d2e4-b6448f1ed39b"
+        "outputId": "68b99b3d-a390-4192-aa2d-cbe379623126"
       },
-      "execution_count": 41,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['Year', 'Make', 'Model', 'Trim', 'Body', 'Transmission', 'Vin', 'State', 'Condition', 'Odometer', 'Color', 'Interior', 'Seller', 'Mmr', 'Sellingprice', 'Saledate', 'Saledate_Formatted']\n"
+            "['Year', 'Make', 'Model', 'Trim', 'Body', 'Transmission', 'Vin', 'State', 'Condition', 'Odometer', 'Color', 'Interior', 'Seller', 'Mmr', 'Sellingprice', 'Saledate']\n"
           ]
         }
       ]
